gcc/testsuite/rust/rustc/ui/parser/issue-8537.rs
pub extern
  "invalid-ab_isize" // { dg-error ".E0703." "" { target *-*-* } }
fn foo() {}

fn main() {}

